<resources>
    <string name="app_name">Convertidor de temperaturas</string>
    <string name="headd">Convertidor de</string>
    <string name="headd1">temperaturas</string>
    <string name="headd2">☼ Temperatura Celcius</string>
    <string name="headd3">☼ Temperatura Fahrenheit</string>
    <string name="headd4">☼ Temperatura Kelvin</string>
    <string name="headd5">☼ Temperatura Rankine</string>
    <string name="headd6">☼ Temperatura Réaumur</string>

    <string name="headd7">Ver biografías ↓</string>
    <string name="headd8">Ver biografías</string>

    <string name="title_activity_fahrenheir_layout">FahrenheirLayout</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_fahrenheit_layout">FahrenheitLayout</string>

    <string name="infoapp">Convertidor de temperaturas.</string>
    <string name="infoapp1">☼ →</string>
    <string name="infoapp2">Es una aplicación que permite a los usuarios hacer conversión de valores en los diferentes tipos de unidades de medida de calor, como son:</string>
    <string name="infoapp3">Celcius - Fahrenheit - Kelvin - Rankine - Réaumur</string>

    <string name="yt"><u>Poíticas de privacidad</u></string>

    <string name="banner_ad_unit_id">ca-app-pub-9651306497503321/4661736873</string>
    <string name="todo">TODO</string>


    <string name="celcius">Anders Celsius</string>
    <string name="clb">(Uppsala, Suecia, 1701 - id., 1744) Físico y astrónomo sueco, creador de de la escala termométrica que lleva su nombre. Anders Celsius fue, junto con Emanuel Swedenborg, Carl von Linné y Carl Wilhelm Scheele, una de las destacadas figuras del círculo de grandes científicos que introdujeron en Suecia las nuevas tendencias de las ciencias naturales, la investigación experimental y la visión newtoniana del mundo.</string>
    <string name="kelvin">William Thomson [Lord Kelvin]</string>
    <string name="klvb">(Belfast, 1824 - Netherhall, 1907) Físico y matemático británico también conocido como lord Kelvin, título nobiliario que le fue otorgado en reconocimiento a sus estudios e invenciones. Aunque fueron numerosas y notables sus contribuciones a la física (y en particular a la termodinámica), es especialmente recordado como el creador de la escala termométrica que lleva su nombre (Escala de Kelvin).</string>
    <string name="reaumur">René-Antoine Réaumur</string>
    <string name="rmrb">(René Antoine Ferchault de Réaumur; La Rochelle, Francia, 1683 - Saint-Julien-du-Terroux, id., 1757) Físico francés. Establecido en París desde 1703, pronto se dio a conocer por su extraordinaria capacidad, y a la edad de veinticinco años se convirtió en miembro de la Academia de las Ciencias. En 1710 recibió el encargo de redactar la descripción oficial de las artes, industrias y oficios en Francia.</string>
    <string name="rankine">William John Macquorn Rankine</string>
    <string name="rnkb">(Edimburgo, 1820-Glasgow, Reino Unido, 1872) Ingeniero y físico británico. Contribuyó a dar una orientación moderna a la técnica de las construcciones y a la ingeniería mecánica, sistematizando sobre bases racionales las muchas nociones y hábitos de trabajo que habían ido evolucionando con la práctica. Desde 1840 se dedicó al estudio de las leyes de la termodinámica; en el Manual of the Steam Engine (1859) desarrolló analíticamente el complejo de las transformaciones del vapor en las máquinas térmicas, y estableció el ciclo termodinámico característico (ciclo de Rankine). Defensor convencido de la «energía», desempeñó un importante papel en los debates teóricos de la física de la segunda mitad del siglo XIX. En un escrito de 1855, Outlines of the Science of Energetics (Esbozos para una ciencia de la energía), propuso asumir los principios de la termodinámica para comprender los fenómenos físicos.</string>
    <string name="fahrenheit">Daniel Gabriel Fahrenheit</string>
    <string name="fahb">(Danzig, hoy Gdansk, actual Polonia, 1686 - La Haya, 1736) Físico holandés. Pese a su origen polaco, Daniel Gabriel Fahrenheit permaneció la mayor parte de su vida en la República de Holanda. El fallecimiento repentino de sus padres, comerciantes acomodados, cuando contaba quince años de edad, propició su traslado a Amsterdam, por entonces uno de los centros más activos de fabricación de instrumentos científicos. Tras un viaje de ampliación de estudios por Alemania e Inglaterra y una estancia en Dinamarca, en cuya capital conoció a Roemer (1708), fue soplador de vidrio en Amsterdam y comenzó a construir instrumentos científicos de precisión.</string>

    <string name="link">www.biografiasyvidas.com</string>
</resources>